--- a/Currency-Converter/Currency-Converter.css
+++ b/Currency-Converter/Currency-Converter.css
@@ -1,17 +1,18 @@
 #body {
     width: 100%;
     height: 100%;
-    background-color:pink;
+    background-color: #d3d3d3;
 }
 #banner {
     color: black;
     text-align: center;
-    font-weight: bolder;
+    font-weight: bolder;    
 } 
 label {
     width: 100%;
-    color: black;
+    color: white;
     font-weight: bold;
+    margin: 10px;
 }
 #unit {
     font-size: 1.5rem;
@@ -33,4 +34,9 @@ i {
 }
 #currency {
     font-size: 2.5rem;
+}
+form {
+    background-image: url("images/currency-converter-cover-pic.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
